Finishing Week and Month Options View

--- a/src/main/webapp/pages/analysis.xhtml
+++ b/src/main/webapp/pages/analysis.xhtml
@@ -256,9 +256,8 @@
 											model="#{analysisBean.analysisDayPojo.lineModel}" type="line" />
 									</c:when>
 									<c:otherwise>
-										<div class="analysisChartCSS">
-											<p:outputLabel styleClass="noRegClass"
-												value="No Data to Display for this Date!"></p:outputLabel>
+										<div>
+											<h2 class="noRegClass">No Data to Display for this Date!</h2>
 										</div>
 									</c:otherwise>
 								</c:choose>
