--- a/src/main/webapp/pages/analysis.xhtml
+++ b/src/main/webapp/pages/analysis.xhtml
@@ -254,6 +254,12 @@
 										<p:chart styleClass="analysisChartCSS" id="chartDayId"
 											responsive="true" widgetVar="chartDayId"
 											model="#{analysisBean.analysisDayPojo.lineModel}" type="line" />
+										<p:spacer height="20"/>
+										<hr/>
+										<p:outputLabel styleClass="timeAnalysis" value="Time Analysis" for="allowTimeComp"></p:outputLabel>
+										<p:spacer width="5"/>
+										<p:selectBooleanCheckbox widgetVar="allowTimeComp" id="allowTimeComp" 
+													label="Time Analysis"></p:selectBooleanCheckbox>
 									</c:when>
 									<c:otherwise>
 										<div>
